# testing

./: .env  .replit  design_guidelines.md  package-lock.json  package.json  replit.md  test-db.ts
attached_assets/: Pasted--You-are-an-expert-full-stack-engineer-Create-a-COMPLETE-full-stack-project-using-Frontend-Rea-1764240233260_1764240233262.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AppSidebar.tsx  BrowseItem.tsx  NotesPanel.tsx  QuizCard.tsx  QuizHistoryItem.tsx  StatsCard.tsx  VideoPlaceholder.tsx
client/src/components/examples/: BrowseItem.tsx  NotesPanel.tsx  QuizCard.tsx  QuizHistoryItem.tsx  StatsCard.tsx  VideoPlaceholder.tsx
client/src/context/: AppContext.tsx
client/src/pages/: Browse.tsx  Home.tsx  Profile.tsx  Quiz.tsx
hack27/: main.py  pyproject.toml  test.py
hack27/planner/: manim_run.py  plannerscript.py
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
